--- a/src/_includes/css/components/video.css
+++ b/src/_includes/css/components/video.css
@@ -3,7 +3,7 @@
   padding-bottom: 56.25%; /* 16:9 */
   height: 0;
   margin-bottom: var(--spacing-xlarge);
-  margin-top: var(--spacing-small);
+  margin-top: var(--spacing-xlarge);
 }
 
 .video-wrapper iframe,
